--- a/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/stock_month.html
+++ b/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/stock_month.html
@@ -39,18 +39,21 @@ cursor:pointer;
                         <thead>
 
                             <tr>
-                                <th rowspan="3"   class="align-middle text-white "> <h6 class="d-flex align-items-sm-start par p-1 py-1" style="margin-left: 20px;">Particular</h6></th>
                                 
-                                <th colspan="4" class="text-center text-white " ><h6><i>{{std.name}}</i></h6>
+                                <th rowspan="4"   class="align-middle text-white "> <h6 class="d-flex align-items-sm-start par p-1 py-1" style="margin-left: 20px;">Particular</h6></th>
+                                
+                                <th colspan="6" class="text-center text-white " ><h6><i>{{std.name}}</i></h6>
                                   <h6><strong> ABC PVT.LTD </strong></h6><h6> For 1-Apr-2022</h6></th>
                               </tr>
                               <tr>
-
+                                <th colspan="2" class="text-center text-white" style="width: 23%;"><h6> <strong> Outwards </strong></h6></th>
                                 <th colspan="2" class="text-center text-white" style="width: 23%;"><h6> <strong> Outwards </strong></h6></th>
                                 <th colspan="2" class="text-center text-white " style="width: 23%;"><h6> <strong>closing balance</strong></h6></th>
 
                               </tr>
                               <tr>
+                                <th class="text-center text-white">Quantity</th>
+                                <th class="text-center text-white">value</th>
                                 <th class="text-center text-white">Quantity</th>
                                 <th class="text-center text-white">value</th>
                                 <th class="text-center text-white">Quantity</th>
@@ -75,6 +78,11 @@ cursor:pointer;
                                 <td></td>
                                 <td></td>
                                 <td style="text-align: end;"><strong>{{std.opening_balance}}</strong></td>
+                                <td></td>
+                                <td>89</td>
+                                <td>89</td>
+                                
+                               
 
                             </tr>
                             
@@ -97,6 +105,11 @@ cursor:pointer;
                                 <td style="text-align: end;"><strong></strong></td>
                                 <td style="text-align: end;"><strong></strong></td>
                                 <td style="text-align: end;"><strong></strong></td>
+                                <td></td>
+                               
+                                
+                                
+                                
                                     
                                             
                                 
@@ -113,9 +126,14 @@ cursor:pointer;
                                 
 
                                  <!-- {% else%} -->
+                                 <!-- <td style="text-align: end;"><strong></strong></td>
                                  <td style="text-align: end;"><strong></strong></td>
                                  <td style="text-align: end;"><strong></strong></td>
-                                 <td style="text-align: end;"><strong></strong></td>
+                                 <td></td>
+                                 <td></td>
+                                 <td></td>
+                                 <td></td>
+                                 <td></td> -->
                                  <!-- {% endif %} -->
 
                             </tr>
@@ -129,6 +147,9 @@ cursor:pointer;
                                 <td></td>
                                 <td  style="text-align: center;"><strong>{{std.quantity}}</strong></td>
                                 <td  style="text-align: center;">{{std.value}}</td>
+                                <td></td>
+                                <td></td>
+                               
                                 
 
                             </tr>
@@ -139,6 +160,8 @@ cursor:pointer;
                                 <td></td>
                                 <td style="text-align: end;"><strong></strong></td>
                                 <td></td>
+                                <td></td>
+                                <td></td>
 
                             </tr>
                             <tr class="table-row">
@@ -146,6 +169,8 @@ cursor:pointer;
                                 <td></td>
                                 <td></td>
                                 <td style="text-align: end;"><strong></strong></td>
+                                <td></td>
+                                <td></td>
                                 <td></td>
 
                             </tr>
@@ -155,6 +180,8 @@ cursor:pointer;
                                 <td></td>
                                 <td style="text-align: end;"><strong></strong></td>
                                 <td></td>
+                                <td></td>
+                                <td></td>
 
                             </tr>
                             <tr class="table-row">
@@ -162,6 +189,8 @@ cursor:pointer;
                                 <td></td>
                                 <td></td>
                                 <td style="text-align: end;"><strong></strong></td>
+                                <td></td>
+                                <td></td>
                                 <td></td>
 
                             </tr>
@@ -171,6 +200,8 @@ cursor:pointer;
                                 <td></td>
                                 <td style="text-align: end;"><strong></strong></td>
                                 <td></td>
+                                <td></td>
+                                <td></td>
 
                             </tr>
                             <tr class="table-row">
@@ -178,6 +209,8 @@ cursor:pointer;
                                 <td></td>
                                 <td></td>
                                 <td style="text-align: end;"><strong></strong></td>
+                                <td></td>
+                                <td></td>
                                 <td></td>
 
                             </tr>
@@ -187,6 +220,8 @@ cursor:pointer;
                                 <td></td>
                                 <td style="text-align: end;"><strong></strong></td>
                                 <td></td>
+                                <td></td>
+                                <td></td>
 
                             </tr>
                             <tr class="table-row">
@@ -194,6 +229,8 @@ cursor:pointer;
                                 <td></td>
                                 <td></td>
                                 <td style="text-align: end;"><strong></strong></td>
+                                <td></td>
+                                <td></td>
                                 <td></td>
 
                             </tr>
@@ -203,6 +240,8 @@ cursor:pointer;
                                 <td></td>
                                 <td style="text-align: end;"><strong></strong></td>
                                 <td></td>
+                                <td></td>
+                                <td></td>
 
                             </tr>
                             <tr class="table-row">
@@ -211,6 +250,8 @@ cursor:pointer;
                                 <td></td>
                                 <td style="text-align: end;"><strong></strong></td>
                                 <td></td>
+                                <td></td>
+                                <td></td>
 
                             </tr>
                             <tr class="table-row">
@@ -218,6 +259,8 @@ cursor:pointer;
                                 <td></td>
                                 <td></td>
                                 <td style="text-align: end;"><strong></strong></td>
+                                <td></td>
+                                <td></td>
                                 <td></td>
 
                             </tr>
@@ -230,6 +273,8 @@ cursor:pointer;
                                 <th  style="text-align: end;"></th>
                                 <th  style="text-align: center;">{{std.quantity}}</th>
                                 <th style="text-align: center;"> {{std.value}}</th>
+                                <td></td>
+                                <td></td>
                                 
                             </tr>
 
