--- a/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/group_month.html
+++ b/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/group_month.html
@@ -48,11 +48,11 @@
                     <tbody >
                     
                     <tr>
-                        <td style="text-align: center;"> </td>
-                        <td ><strong></strong> </td>
-                        <td><strong></strong> </td>
-                        <td style="text-align: right ;"></td>
-                        <td class="debit" style="text-align: right ;"><strong>
+                        <td style="text-align: center;">1-Apr-22</td>
+                        <td ><strong></strong>sbi</td>
+                        <td><strong></strong>payment</td>
+                        <td style="text-align: right ;">9</td>
+                        <td class="debit" style="text-align: right ;">800<strong>
                         
                         <td style="text-align: right ;"><strong></strong></td>
 
@@ -108,10 +108,10 @@
                           
                         {% if std.ledger_cr_db == 'Cr' %}
                             <td style="text-align: right;"><strong></strong></td>
-                            <td style="text-align: right;">{{ std.ledger_opening_bal }}<strong></strong></td>
+                            <td style="text-align: right;">1500<strong></strong></td>
                             
                         {% elif std.ledger_cr_db == 'Dr' %}   
-                            <td style="text-align: right;">{{ std.ledger_opening_bal }}<strong></strong></td>
+                            <td style="text-align: right;">800<strong></strong></td>
                             <td style="text-align: right;"><strong></strong></td>
                             
                         {% endif %}
