--- a/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/item_2.html
+++ b/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/item_2.html
@@ -42,23 +42,22 @@ cursor:pointer;
                                 
                                 <th rowspan="4"   class="align-middle text-white "> <h6 class="d-flex align-items-sm-start par p-1 py-1" style="margin-left: 20px;">Particular</h6></th>
                                 
-                                <th colspan="3" class="text-center text-white " ><h6><i>{{std.name}}</i></h6>
+                                <th colspan="6" class="text-center text-white " ><h6><i>{{std.name}}</i></h6>
                                   <h6><strong> ABC PVT.LTD </strong></h6><h6> For 1-Apr-2022</h6></th>
                               </tr>
                               <tr>
-                                <!-- <th colspan="2" class="text-center text-white" style="width: 23%;"><h6> <strong> Outwards </strong></h6></th>
-                                <th colspan="2" class="text-center text-white" style="width: 23%;"><h6> <strong> Outwards </strong></h6></th> -->
-                                <th colspan="3" class="text-center text-white " style="width:50%;"><h6> <strong>closing balance</strong></h6></th>
+                                <!-- <th colspan="2" class="text-center text-white" style="width: 23%;"><h6> <strong> Outwards </strong></h6></th>-->
+                                <th colspan="3" class="text-center text-white" style="width: 30%;"><h6> <strong>opening balance</strong></h6></th>
+                                <th colspan="3" class="text-center text-white " style="width:30%;"><h6> <strong>closing balance</strong></h6></th>
 
                               </tr>
                               <tr>
                                 <th class="text-center text-white">Quantity</th>
                                 <th class="text-center text-white">Rate</th>
                                 <th  class="text-center text-white">value</th>
-                                <!-- <th class="text-center text-white">Quantity</th>
-                                <th class="text-center text-white">value</th>
                                 <th class="text-center text-white">Quantity</th>
-                                <th class="text-center text-white">value</th> -->
+                                <th class="text-center text-white">Rate</th>
+                                <th class="text-center text-white">value</th> 
                                 
                               </tr>
 
@@ -74,14 +73,18 @@ cursor:pointer;
                         
 
                         <tbody>
-                          {% for p in std %}
+                          {% for p in ptm %}
                           
                               
                           <tr class="table-row">
                             <td ><a class="m-3" href="{% url 'stock_month' p.id %}">{{p.name}}</a></td>
-                            <td  style="text-align: center;">{{closing_qun}} BTL</td>
+                            <td  style="text-align: center;">{{p.quantity}} BTL</td>
                             <td  style="text-align: center;">{{p.rate}}</td>
-                            <td  style="text-align: center;">{{closing_val}}</td>
+                            <td  style="text-align: center;">{{p.value}}</td>
+
+                            <td style="text-align: center;">{{closing_qun}} BTL</td>
+                            <td style="text-align: center;">{{p.rate}}</td>
+                            <td style="text-align: center;">{{closing_val}}</td>
                           </tr>
                          
                                 
@@ -149,9 +152,13 @@ cursor:pointer;
                             <tr class="table-row">
                                 <th  ><h6 class="d-flex align-items-sm-start par p-1 py-1 foot" style="margin-left: 0px;">Grand Total</h6></th>
                                 
-                                <td  style="text-align: center;">{{closing_qun}} BTL</td>
                                 <td  style="text-align: center;"></td>
-                                <td  style="text-align: center;">{{closing_val}}</td>
+                                <td  style="text-align: center;"></td>
+                                <td  style="text-align: center;">{{total}}</td>
+
+                                <td></td>
+                                <td></td>
+                                <td style="text-align: center;">{{closing_val}}</td>
                                 
                             </tr>
 
