--- a/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/stockgroup.html
+++ b/OneDrive/Desktop/tally_profit_loss_section-master/tapp1/templates/stockgroup.html
@@ -1,72 +1,188 @@
 {% extends 'base.html' %}
 
+
 {% block body %}
-
-<style>
-  
-.table_row:hover{
-  background-color: darkgoldenrod;
-}
-
-.name{
-  margin-right: -53.5px;
-}
-</style>
-
-
-<div class="container-fluid "style=" border: 1px solid rgba(128, 128, 128, 0.6);background-color:rgba(0,0,0,.4);" >
+<head>
+    <style>
+          thead th {
+    border: .5px solid rgba(255, 255, 255, .2); ;
     
-    <div class="row">
-        <div class="col-sm-12 m-0 p-0 b1 " style=" " >
-           
-          <div class="row m-0" style="border-bottom: 1px solid rgba(128, 128, 128, 0.6)">
-            <div class="col-sm-3 m-0 p-0 "style="border-right: 1px solid rgba(128, 128, 128, 0.6)" ><h5 class=" par">particulars</h6></div>
-                <div class="col-sm-3 m-0 pl-5 " ><h5 class=" par">Closing Balance</h6></div>
-                <div class="col-sm-3 m-0 p-0 head"><p class=" ABC">ABC Limited </br>For 1-Apr-22</br></p></div>
-        </div>
+    
+ }
+ .table-row{
+cursor:pointer;
+}
+.table-row:hover{
+    background-color: rgb(216, 155, 51);
+}
+.table-row1{
+cursor:pointer;
+}
+.table-row1:hover{
+    background-color: rgb(216, 155, 51);
+}    
+  
+
+    </style>
+</head>
+
+<body>
+    <div class="container-fluid">
+        <div class="main-panel">
+            <div class="content-wrapper">
+                <div class="row d-flex " style="background-color: rgb(103, 175, 220);color:#fff;width:100%;margin: auto;">
+                    <div class="col ">stock group Summary</div>
+                </div>
+                <div class="table-responsive" >
+                    <table class="table" style="background-color: rgba(33,57,77,255);color:#fff;">
+
+                        <thead>
+
+                            <tr>
+                                
+                                <th rowspan="4"   class="align-middle text-white "> <h6 class="d-flex align-items-sm-start par p-1 py-1" style="margin-left: 20px;">Particular</h6></th>
+                                
+                                <th colspan="3" class="text-center text-white " ><h6><i>{{std.name}}</i></h6>
+                                  <h6><strong> ABC PVT.LTD </strong></h6><h6> For 1-Apr-2022</h6></th>
+                              </tr>
+                              <tr>
+                                <!-- <th colspan="2" class="text-center text-white" style="width: 23%;"><h6> <strong> Outwards </strong></h6></th>
+                                <th colspan="2" class="text-center text-white" style="width: 23%;"><h6> <strong> Outwards </strong></h6></th> -->
+                                <th colspan="3" class="text-center text-white " style="width:50%;"><h6> <strong>closing balance</strong></h6></th>
+
+                              </tr>
+                              <tr>
+                                <th class="text-center text-white">Quantity</th>
+                                <th class="text-center text-white">Rate</th>
+                                <th  class="text-center text-white">value</th>
+                                <!-- <th class="text-center text-white">Quantity</th>
+                                <th class="text-center text-white">value</th>
+                                <th class="text-center text-white">Quantity</th>
+                                <th class="text-center text-white">value</th> -->
+                                
+                              </tr>
+
+                              
+
+                             
 
 
 
-            <table class="table "  style="border: 1px solid rgba(128, 128, 128, 0.6)">
-                <thead>
-                  <tr>
-                    <th scope="col"></th>
-                    <th scope="col">Quantity</th>
-                    <th scope="col">Rate</th>
-                    <th scope="col">Value</th>
-                  </tr>
-                </thead>
-                <tbody>
-                {% for p in std %}
-                  <tr>
-                    <td class="table_row"><a class="name" href="{% url 'item_list' p.id %}">{{p.name}}</a></td>
-                    <td></td>
-                    <td></td>
-                    <td>{{total}}</td>
-                  </tr>
-                {% endfor %}
-                  
-                </tbody>
-              </table>
 
-        </div>
 
-      
+                        </thead>
+                        
 
-        <div class="col-sm-12 m-0 p-0  "style="border-top: 1px solid rgba(128, 128, 128, 0.6)"  >
-           
+                        <tbody>
+                          {% for p in ptm %}
+                          
+                              
+                          <tr class="table-row">
+                            
+                            <td ><a class="m-3" href="{% url 'item_list' p.id %}">{{p.name}}</a></td>
+                            <td  style="text-align: center;">{{p.quantity}} </td>
+                            <td  style="text-align: center;">{{p.rate}}</td>
+                            <td  style="text-align: center;">{{p.value}}</td>
+                          </tr>
+                         
+                                
+                        {% endfor %}
+                          
+                            <!-- {% for i in mo %} -->
+                            
+                            
+                            
+                            <tr class="table-row" data-href="">
+                                <td>April</td>
+                                
+                                 
+                                <!-- {% if i.leger_month_closing_set.all %}
+                                 
+                                {% for j in i.leger_month_closing_set.all %}
+                                 
+                                    {% if j.Ledger == le %} -->
 
-            <div class="row m-0" >
-                <div class="col-sm-6 m-0 p-0 " ><a class="total">Grand Total</a></div>
-                   
+                                 
+                                 
+                                <td style="text-align: end;"><strong></strong></td>
+                                <td style="text-align: end;"><strong></strong></td>
+                                <td style="text-align: end;"><strong></strong></td>
+                                <td></td>
+                               
+                                
+                                
+                                
+                                    
+                                            
+                                
+                              
+                                    <!-- {% endif %} -->
+                                    
+
+                                
+
+                               
+                                
+                                <!-- {% endfor %} -->
+                                
+                                
+
+                                 <!-- {% else%} -->
+                                 <!-- <td style="text-align: end;"><strong></strong></td>
+                                 <td style="text-align: end;"><strong></strong></td>
+                                 <td style="text-align: end;"><strong></strong></td>
+                                 <td></td>
+                                 <td></td>
+                                 <td></td>
+                                 <td></td>
+                                 <td></td> -->
+                                 <!-- {% endif %} -->
+
+                            </tr>
+                            
+                            <!-- {% endfor %} -->
+
+                          
+
+                          
+
+
+                            <tr class="table-row">
+                                <th  ><h6 class="d-flex align-items-sm-start par p-1 py-1 foot" style="margin-left: 0px;">Grand Total</h6></th>
+                                
+                                <td  style="text-align: center;"> {{closing_quntity}} BTL</td>
+                                <td  style="text-align: center;"></td>
+                                <td  style="text-align: center;">{{closing_value}}</td>
+                                
+                            </tr>
+
+                            
+
+                            
+
+                            
+
+
+                        </tbody>
+                        
+
+
+
+
+                    
+                    </table>
+                  </div>
             </div>
-
         </div>
-
-
     </div>
-</div>
+    
 
-
+    <script>
+        $(document).ready(function($) {
+            $(".table-row").click(function() {
+                window.document.location = $(this).data("href");
+            });
+        });
+    </script>
 
 {% endblock %}
